--- a/css/style.css
+++ b/css/style.css
@@ -153,4 +153,63 @@ html {
   width: 65%;
   border-left: 1px solid rgba(0, 0, 0, 0.08);
   border-bottom: 0.6rem solid #4adf83;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.view-cntent {
+  max-width: 56rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.view {
+  padding-top: 4rem;
+  margin-bottom: 3rem;
+  height: 29rem;
+  width: 29rem;
+  text-align: center;
+}
+.view-img {
+  height: 100%;
+}
+
+.view-description {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.08);
+}
+.view-description-title {
+  font-weight: 300;
+  font-size: 3.6rem;
+  color: rgba(0, 0, 0, 0.6);
+  font-family: inherit;
+}
+.view-description-paragraph {
+  margin-top: 2rem;
+  font-family: inherit;
+  font-size: 1.7rem;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.45);
+  margin-bottom: 3rem;
+}
+
+.view-download {
+  margin-top: 4rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgba(0, 0, 0, 0.45);
+  font-weight: 300;
+  font-size: 1.8rem;
+  display: flex;
+  align-self: center;
+}
+.view-download-img {
+  padding-top: 0.2rem;
+  padding-right: 0.4rem;
+}
+.view-download-link {
+  text-decoration: none;
+  color: #4adf83;
 }/*# sourceMappingURL=style.css.map */
