--- a/css/style.scss
+++ b/css/style.scss
@@ -32,7 +32,7 @@ html {
     background: white;
 }
 ::-webkit-scrollbar-thumb {
-    background: #d4d4d4; 
+    background: #d4d4d4;
   }
 .container {
     width:  100vw;
@@ -55,7 +55,7 @@ html {
 }
 .user-header__state {
     padding : 1rem 1.6rem;
-    background-color: var(--header-background); 
+    background-color: var(--header-background);
 }
 .user-img {
     height: 4rem;
@@ -75,7 +75,7 @@ html {
 
     &__input {
         width : 95%;
-       
+
         border:none;
         outline:none;
         // text-align: center;
@@ -87,11 +87,11 @@ html {
         &::placeholder {
             color: #c0beb5;
             font-size: 1.5rem;
-        
+
         }
 
         &:focus::-webkit-input-placeholder {
-            opacity: 0;   
+            opacity: 0;
         }
 
         // &:focus {
@@ -127,7 +127,7 @@ html {
 .contact{
     display: flex;
     padding : 1rem 1.6rem;
-    
+
 }
 
 .contact-content {
@@ -154,7 +154,7 @@ html {
 .contact-when {
     font-size: 1.3rem;
     font-weight: 300;
-    
+
 
 }
 .contact-content-msg {
@@ -162,10 +162,78 @@ html {
 }
 ///////////////////////
 /// MAIN SECTION
+
+
 .whats-view {
     // background-color: turquoise ;
     background-color: #f8f9fa;
     width: 65%;
     border-left: 1px solid rgba(0,0,0,.08);
-    border-bottom: .6rem solid #4adf83; 
+    border-bottom: .6rem solid #4adf83;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.view-cntent {
+    max-width: 56rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // padding-left: 4rem;
+}
+
+.view{
+    padding-top: 4rem;
+    margin-bottom: 3rem;
+    height: 29rem;
+    width:  29rem;
+    text-align: center;
+    &-img{
+        height: 100%;
+    }
+
+}
+
+.view-description {
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-bottom:.1rem solid rgba(0,0,0,.08);
+
+    &-title {
+        font-weight: 300;
+        font-size: 3.6rem;
+        color: rgba(0,0,0,.6);
+        font-family: inherit;
+    }
+
+    &-paragraph{
+        margin-top: 2rem;
+        font-family: inherit;
+        font-size: 1.7rem;
+        font-weight: 400;
+        color: rgba(0,0,0,.45);
+        margin-bottom: 3rem;
+    }
+}
+
+
+
+.view-download {
+    margin-top: 4rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgba(0,0,0,.45);
+    font-weight: 300;
+    font-size: 1.8rem;
+    display: flex;
+    align-self: center;
+    &-img {
+        // height: 1.7rem;
+        padding-top: .2rem;
+        padding-right: .4rem;
+    }
+    &-link {
+        text-decoration: none;
+        color: #4adf83;
+    }
 }
