--- a/css/style.scss
+++ b/css/style.scss
@@ -54,8 +54,11 @@ html {
     width: 100%;
 }
 .user-header__state {
-    padding : 1rem 1.6rem;
+    padding : 1.5rem 1.6rem;
     background-color: var(--header-background);
+    display: flex;
+    justify-content: space-between;
+    align-items: initial;
 }
 .user-img {
     height: 4rem;
@@ -64,6 +67,18 @@ html {
     border-radius:50% ;
 }
 
+.user-sts {
+    margin-right: 2rem;
+}
+.item {
+    background-color:transparent;
+    border:none;
+    outline: none;
+    cursor:pointer;
+    &:not(:first-child){
+        margin-left: 2rem;
+    }
+}
 
 .search {
     padding: 1rem 1.6rem;
