--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,11 @@ html {
 
 .contact-content-msg {
   margin-bottom: 1.3rem;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.8rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgba(0, 0, 0, 0.55);
 }
 
 .whats-view {
