--- a/css/style.scss
+++ b/css/style.scss
@@ -174,6 +174,13 @@ html {
 }
 .contact-content-msg {
     margin-bottom: 1.3rem;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.8rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    // font-weight: 350;
+    color: rgba(0,0,0,.55);
+    
 }
 ///////////////////////
 /// MAIN SECTION
