fix user search bar

--- a/css/style.scss
+++ b/css/style.scss
@@ -61,8 +61,9 @@ html {
     align-items: initial;
 }
 .user-img {
-    height: 4rem;
-    width: 4rem;
+    box-sizing: border-box;
+    height: 5rem;
+    width: 5rem;
     // background-image: cover;
     border-radius:50% ;
 }
@@ -84,6 +85,10 @@ html {
     padding: 1rem 1.6rem;
     background-color: var(--userSearch-background);
     border-bottom:  1px solid rgba(0,0,0,.08);
+    // first time using this feature
+    &:focus-within {
+        background-color: white;
+    }
 }
 
 .user-search {
